--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>"My first HTML Page"</title>
 </head>
 <body>
-    <p>hello world</p>
-    
+    <h1>  My Name-Ayush Sharma <br>
+        father's Name-Manoj Kumar Sharma  <br>      
+        Mother's Name-Pushpa Sharma 
+    </h1>
+        <h2>Branch name-CSE AIML <br>
+            Section Name -1
+        </h2>
+        <p>Address-96/6 Chunniganj,Post Colonel Ganj  <br>
+
+            City-Kanpur Nagar <br>
+            State-Uttar Pradesh</p>
 </body>
 </html>
