--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>"My first HTML Page"</title>
 </head>
 <body>
-    <h1>  My Name-Ayush Sharma <br>
+    <h1 style="color: brown;">  My Name-Ayush Sharma <br>
         father's Name-Manoj Kumar Sharma  <br>      
         Mother's Name-Pushpa Sharma 
     </h1>
