updated html file

--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"My first HTML Page"</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1 style="color: brown;">  My Name-Ayush Sharma <br>
-        father's Name-Manoj Kumar Sharma  <br>      
-        Mother's Name-Pushpa Sharma 
-    </h1>
-        <h2>Branch name-CSE AIML <br>
-            Section Name -1
-        </h2>
-        <p>Address-96/6 Chunniganj,Post Colonel Ganj  <br>
+    <!-- Types of Element-->
+         <!-- Block Elements-->
+          <!-- <div>hello</div>
+          <!-- <div>world</div> --> 
+          <a href="aaditya">aadi</a>
+         <center>jello world</center>
+         <b>hello sir</b> <br>
+          <i>aaditya ayush</i>
+<br>
+<hr>
+<img src="download.jpg" alt=""><br>
+<font color = "#ff0000"> this text has color</font>
 
-            City-Kanpur Nagar <br>
-            State-Uttar Pradesh</p>
 </body>
 </html>
