--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,18 +7,37 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Types of Element-->
+    <!-- Types of Element
          <!-- Block Elements-->
           <!-- <div>hello</div>
-          <!-- <div>world</div> --> 
+          <div>world</div> 
           <a href="aaditya">aadi</a>
          <center>jello world</center>
          <b>hello sir</b> <br>
           <i>aaditya ayush</i>
-<br>
+<br> -->
 <hr>
 <img src="download.jpg" alt=""><br>
-<font color = "#ff0000"> this text has color</font>
-
-</body>
-</html>
+<font color = "#ff0000"> this text has color</font> <br>
+<!-- <pre>hello
+    world
+    aiml
+</pre> -->
+<!-- <sub>hello</sub> <br>
+<sup>world</sup> -->
+<p><h1>Text Formatting Examples</h1></p>
+<p><h2>Bold text(using&lt;b&gt;)</h2></p>
+<br>
+<p> <Strong> Important text </Strong></p>
+<mark>highlighted text</mark> <br>
+<small>Using &lt;small&gt;</small>
+<p>H<sub>2</sub>O</p>
+<p>X<sup></sup>2</p>
+<p><del>Deleted text</del></p>
+<ins>Inserted text using </ins> <br>
+<p><h1>Special Character & Entities</h1>
+<p>less than:&lt;</p>
+<p>greater than:&lt;</p>
+<br>
+<p> Ampersand: &</p>
+<p>single quote</p>:&apos;hello&quot;
